--- a/.github/workflows/the_front_page.yml
+++ b/.github/workflows/the_front_page.yml
@@ -1,8 +1,8 @@
 name: run main.py
 
-on:
-  schedule:
-    - cron: "0 12 * * *"
+on: [push]
+  # schedule:
+  #   - cron: "0 12 * * *"
 
 jobs:
   build:
