--- a/.github/workflows/the_front_page.yml
+++ b/.github/workflows/the_front_page.yml
@@ -22,8 +22,8 @@ jobs:
           pip install -r requirements.txt
 
       - name: execute py script # run main.py
-        env:
-          WEBHOOKS: ${{ secrets.WEBHOOKS }}
+        # env:
+        #   WEBHOOKS: ${{ secrets.WEBHOOKS }}
         run: python the_front_page.py
         
       - name: Keepalive Workflow
