--- a/.github/workflows/the_front_page.yml
+++ b/.github/workflows/the_front_page.yml
@@ -9,12 +9,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: checkout repo content
-        uses: actions/checkout@v3 # checkout the repository content to github runner
+        uses: actions/checkout@v4 # checkout the repository content to github runner
 
       - name: setup python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
-          python-version: "3.11" # install the python version needed
+          python-version: "3.x" # install the python version needed
 
       - name: install python packages
         run: |
