--- a/.github/workflows/the_front_page.yml
+++ b/.github/workflows/the_front_page.yml
@@ -26,9 +26,14 @@ jobs:
           pip install -r requirements.txt
 
       - name: execute py script # run main.py
-        # env:
-        #   WEBHOOKS: ${{ secrets.WEBHOOKS }}
+        env:
+          WEBHOOKS: ${{ secrets.WEBHOOKS }}
         run: python the_front_page.py
         
-      - name: Keepalive Workflow
-        uses: gautamkrishnar/keepalive-workflow@1.1.0
+  workflow-keepalive:
+    if: github.event_name == 'schedule'
+    runs-on: ubuntu-latest
+    permissions:
+      actions: write
+    steps:
+      - uses: liskin/gh-workflow-keepalive@v1
